vpcendpoint_security_group.tf
resource "aws_security_group" "vpcendpoints" {
  name   = "${var.prefix}-vpc-endpoints"
  vpc_id = aws_vpc.default[0].id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
